--- a/jadens-portfolio/src/index.css
+++ b/jadens-portfolio/src/index.css
@@ -66,3 +66,16 @@
     @apply px-5 py-2 rounded-lg bg-black border-2 text-white group-hover:bg-white group-hover:text-black group-hover:border-black;
   }
 }
+
+/* BG  */
+@keyframes gradientShift {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
